# EventManager

./: CMakeLists.txt  Date.cpp  Date.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  Hour.cpp  Hour.h  ToDoList.cpp  ToDoList.h  main.cpp
Utils/: Events.txt
_SaveFiles/: Events.txt
test/: CMakeLists.txt  runAllTest.cpp  testEvent.cpp  testEventManager.cpp
test/lib/googletest/src/: gtest.cc
